--- a/case1/cg_validate.css
+++ b/case1/cg_validate.css
@@ -13,4 +13,12 @@
 
 
 /* Validation Styles */
-
+input:focus, select:focus, textarea:focus{
+   background-color: rgb(245, 245, 140);
+}
+#idBox:focus:valid, #phoneBox:focus:valid, #mailBox:focus:valid, #lnBox:focus:valid, #fnBox:focus:valid{
+   background: rgb(220, 255, 220) url(cg_valid.png) right/contain no-repeat;
+}
+#idBox:focus:invalid, #phoneBox:focus:invalid, #mailBox:focus:invalid, #lnBox:focus:invalid, #fnBox:focus:invalid{
+   background: rgb(255, 232, 232) url(cg_invalid.png) right/contain no-repeat;
+}
